--- a/_pages/marathons.html
+++ b/_pages/marathons.html
@@ -1,52 +1,64 @@
 ---
 layout: archive
 title: "Races"
-permalink: /marathon/
+permalink: /marathons/
 author_profile: true
 ---
 
-## 🏃‍♂️ Marathon
+<h2>Marathon</h2>
+<ul>
+  <li>
+    2025 Chevron Houston Marathon <strong>3:43:07</strong> –
+    <a href="https://www.timingproductions.com/results-site/houston-details?hou_results_id=832450&hou_results_pid=R8CGEPRM">Result Link</a>
+  </li>
+  <li>
+    2024 Illinois Marathon Virtual <strong>4:39:41</strong> –
+    <a href="https://results.raceroster.com/v2/en-US/results/r753tktcy5whrfpw/detail/hrgy9nnd5kbcdurp">Result Link</a>
+  </li>
+  <li>
+    2024 Chevron Houston Marathon <strong>3:28:13</strong> –
+    <a href="https://www.timingproductions.com/results-site/houston-details?hou_results_id=604562&hou_results_pid=RR39WPJG">Result Link</a>
+  </li>
+  <li>
+    2023 Chevron Houston Marathon <strong>3:43:23</strong> –
+    <a href="https://www.timingproductions.com/results-site/houston-details?hou_results_id=280562&hou_results_pid=RSYX3W8M">Result Link</a>
+  </li>
+  <li>
+    2022 Honolulu Marathon <strong>4:36:13</strong> –
+    <a href="https://sportstats.one/results/140524?focus=1866&type=pid">Result Link</a>
+  </li>
+  <li>
+    2022 Chevron Houston Marathon <strong>3:31:21</strong> –
+    <a href="https://track.rtrt.me/e/HOU-2022#/dash/RB4VDGPJ">Result Link</a>
+  </li>
+</ul>
 
-- **2025 Chevron Houston Marathon** — `3:43:07`  
-  [Result Link](https://www.timingproductions.com/results-site/houston-details?hou_results_id=832450&hou_results_pid=R8CGEPRM)
+<h2>Half Marathon</h2>
+<ul>
+  <li>
+    2023 Houston Half Marathon <strong>1:32:46</strong> –
+    <a href="https://mychiptime.com/searchevent.php?id=15361&bib=374&showDetails=1">Result Link</a>
+  </li>
+  <li>
+    2023 HMSA Classic 25K Marathon <strong>1:47:11</strong> –
+    <a href="https://www.hmsaclassical25k.com/Race/Results/142183/IndividualResult/sNRh?resultSetId=424759#U81292745">Result Link</a>
+  </li>
+  <li>
+    2021 St. George Mini Marathon <strong>1:27:39</strong> –
+    <a href="https://www.stgeorgemarathon.com/pdf/sportsandrecreation/races/marathonresultsbooks/marathonresultsbook2021-web4.pdf">Result Link</a>
+  </li>
+  <li>
+    2020 Aramco Houston Half Marathon <strong>1:37:45</strong> –
+    <a href="https://track.rtrt.me/e/HOU-2020#/dash/RDTE6B8L">Result Link</a>
+  </li>
+</ul>
 
-- **2024 Illinois Marathon (Virtual)** — `4:39:41`  
-  [Result Link](https://results.raceroster.com/v2/en-US/results/r753tktcy5whrfpw/detail/hrgy9nnd5kbcdurp)
-
-- **2024 Chevron Houston Marathon** — `3:28:13`  
-  [Result Link](https://www.timingproductions.com/results-site/houston-details?hou_results_id=604562&hou_results_pid=RR39WPJG)
-
-- **2023 Chevron Houston Marathon** — `3:43:23`  
-  [Result Link](https://www.timingproductions.com/results-site/houston-details?hou_results_id=280562&hou_results_pid=RSYX3W8M)
-
-- **2022 Honolulu Marathon** — `4:36:13`  
-  [Result Link](https://sportstats.one/results/140524?focus=1866&type=pid)
-
-- **2022 Chevron Houston Marathon** — `3:31:21`  
-  [Result Link](https://track.rtrt.me/e/HOU-2022#/dash/RB4VDGPJ)
-
----
-
-## 🏃‍♀️ Half Marathon
-
-- **2023 Houston Half Marathon** — `1:32:46`  
-  [Result Link](https://mychiptime.com/searchevent.php?id=15361&bib=374&showDetails=1)
-
-- **2023 HMSA Classic 25K** — `1:47:11`  
-  [Result Link](https://www.hmsaclassical25k.com/Race/Results/142183/IndividualResult/sNRh?resultSetId=424759#U81292745)
-
-- **2021 St. George Mini Marathon** — `1:27:39`  
-  [Result Link](https://www.stgeorgemarathon.com/pdf/sportsandrecreation/races/marathonresultsbooks/marathonresultsbook2021-web4.pdf)
-
-- **2020 Aramco Houston Half Marathon** — `1:37:45`  
-  [Result Link](https://track.rtrt.me/e/HOU-2020#/dash/RDTE6B8L)
-
----
-
-## 🏊‍♂️ Triathlon
-
-- **2023 Boliver Live Triathlon** (Olympic Distance, Swim 500m due to high wave) — `2:20:22`  
-  [Result Link](https://results.raceroster.com/v2/en-US/results/gunxscpx256nn4us/detail/cbj9uxwjwbxdbrns)
-
-
+<h2>Triathlon</h2>
+<ul>
+  <li>
+    2023 Boliver Live Triathlon (Olympic Distance: Swim 500m due to high wave)
+    <strong>2:20:22</strong> –
+    <a href="https://results.raceroster.com/v2/en-US/results/gunxscpx256nn4us/detail/cbj9uxwjwbxdbrns">Result Link</a>
+  </li>
+</ul>
 
