--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,48 +9,65 @@ author_profile: true
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
-# 📄 Peer-Reviewed Publications
+<h2>📄 Peer-Reviewed Publications</h2>
+<ol>
+  <li>
+    <strong>K. Shiratori</strong>, et al.<br>
+    <em>Machine Learning to Adaptively Predict Gold Nanorod Sizes on Different Substrates</em><br>
+    <em>J. Phys. Chem. C</em>, 2025. 
+    <a href="https://pubs.acs.org/doi/10.1021/acs.jpcc.5c00244" target="_blank">Link</a>
+  </li>
+  <li>
+    <strong>K. Shiratori</strong>, et al.<br>
+    <em>Machine-Learned Decision Trees for Predicting Gold Nanorod Sizes from Spectra</em><br>
+    <em>J. Phys. Chem. C</em>, 2021. 
+    <a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcc.1c03937" target="_blank">Link</a>
+  </li>
+  <li>
+    Lin, J., <strong>K. Shiratori</strong>, et al.<br>
+    <em>Competition between Hot Carriers and Surface Electrochemistry in Gold Nanorod Dissolution</em><br>
+    <em>(Accepted)</em>
+  </li>
+  <li>
+    Kim, J.-H., <strong>K. Shiratori</strong>, et al.<br>
+    <em>Suppressed Interparticle Coupling in Plasmonic Meta-Atoms with Intraparticle Hot Spots</em><br>
+    <em>(In Preparation)</em>
+  </li>
+  <li>
+    Yuan, T., <strong>K. Shiratori</strong>, et al.<br>
+    <em>Untangling Energy Dependent Radiation Damping and Chemical Interface Damping in Gold Nanorods</em><br>
+    <em>(In Preparation)</em>
+  </li>
+</ol>
 
-1. **K. Shiratori**, et al.  
-   *Machine Learning to Adaptively Predict Gold Nanorod Sizes on Different Substrates*  
-   *J. Phys. Chem. C*, 2025. [Link](https://pubs.acs.org/doi/10.1021/acs.jpcc.5c00244)
+<hr>
 
-2. **K. Shiratori**, et al.  
-   *Machine-Learned Decision Trees for Predicting Gold Nanorod Sizes from Spectra*  
-   *J. Phys. Chem. C*, 2021. [Link](https://pubs.acs.org/doi/abs/10.1021/acs.jpcc.1c03937)
+<h2>🎤 Conference Presentations</h2>
 
-3. Lin, J., **K. Shiratori**, et al.  
-   *Competition between Hot Carriers and Surface Electrochemistry in Gold Nanorod Dissolution*  
-   *(Accepted)*
+<h3>Oral Presentations</h3>
+<ul>
+  <li>
+    <em>Machine-learned decision trees predicting AuNR dimensions from spectra alone</em><br>
+    AIChE Spring Meeting & 17th Global Congress on Process Safety (Online), April 2021<br>
+    14th Annual Virtual Oil & Gas HPC Conference (Online), March 2021
+  </li>
+</ul>
 
-4. Kim, J.-H., **K. Shiratori**, et al.  
-   *Suppressed Interparticle Coupling in Plasmonic Meta-Atoms with Intraparticle Hot Spots*  
-   *(In Preparation)*
-
-5. Yuan, T., **K. Shiratori**, et al.  
-   *Untangling Energy Dependent Radiation Damping and Chemical Interface Damping in Gold Nanorods*  
-   *(In Preparation)*
-
----
-
-# 🎤 Conference Presentations
-
-## Oral Presentations
-
-- *Machine-learned decision trees predicting AuNR dimensions from spectra alone*  
-  - AIChE Spring Meeting & 17th Global Congress on Process Safety (Online), April 2021  
-  - 14th Annual Virtual Oil & Gas HPC Conference (Online), March 2021
-
-## Poster Presentations
-
-- *Machine-learned decision trees predicting AuNR dimensions*  
-  - ACS Fall 2022, San Diego, CA
-
-- *The interaction of gold nanostructure with different laser polarizations in COMSOL simulation*  
-  - Joint Rice Center for Quantum Engineering–Nakatani RIES Fellowship Poster Session, Houston, TX, September 2018
-
-- *Polarization-angle-resolved Raman spectroscopy on Pb(Zn1/3Nb2/3)O3–8%PbTiO3 under external electric field*  
-  - 12th Japan-Korea Conference on Ferroelectrics, Nara, Japan, August 2018
+<h3>Poster Presentations</h3>
+<ul>
+  <li>
+    <em>Machine-learned decision trees predicting AuNR dimensions</em><br>
+    ACS Fall 2022, San Diego, CA
+  </li>
+  <li>
+    <em>The interaction of gold nanostructure with different laser polarizations in COMSOL simulation</em><br>
+    Joint Rice Center for Quantum Engineering–Nakatani RIES Fellowship Poster Session, Houston, TX, September 2018
+  </li>
+  <li>
+    <em>Polarization-angle-resolved Raman spectroscopy on Pb(Zn<sub>1/3</sub>Nb<sub>2/3</sub>)O<sub>3</sub>–8%PbTiO<sub>3</sub> under external electric field</em><br>
+    12th Japan-Korea Conference on Ferroelectrics, Nara, Japan, August 2018
+  </li>
+</ul>
 
 <!-- {% include base_path %} -->
 
