--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,11 +6,27 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">Google Scholar profile</a>.</div>
 {% endif %}
 
 <h2>📄 Peer-Reviewed Publications</h2>
 <ol>
+  <li>
+    Kim, J.-H., <strong>K. Shiratori</strong>, et al.<br>
+    <em>Suppressed Interparticle Coupling in Plasmonic Meta-Atoms with Intraparticle Hot Spots</em><br>
+    <em>(In Preparation)</em>
+  </li>
+  <li>
+    Yuan, T.,[...], <strong>K. Shiratori</strong>, et al.<br>
+    <em>Untangling Energy-Dependent Radiative, Non-Radiative, and Chemical Interface Damping in Gold Nanorods</em><br>
+    <em>(Submitted)</em>
+  </li>
+  <li>
+    Lin, J., <strong>K. Shiratori</strong>, et al.<br>
+    <em>Competition between Hot Carriers and Surface Electrochemistry in Gold Nanorod Dissolution</em><br>
+    <em>J. Phys. Chem. C</em>, 2025.
+    <a href="https://pubs.acs.org/doi/full/10.1021/acs.jpcc.5c01882" target="_blank">Link</a>
+  </li>
   <li>
     <strong>K. Shiratori</strong>, et al.<br>
     <em>Machine Learning to Adaptively Predict Gold Nanorod Sizes on Different Substrates</em><br>
@@ -22,21 +38,6 @@ author_profile: true
     <em>Machine-Learned Decision Trees for Predicting Gold Nanorod Sizes from Spectra</em><br>
     <em>J. Phys. Chem. C</em>, 2021. 
     <a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcc.1c03937" target="_blank">Link</a>
-  </li>
-  <li>
-    Lin, J., <strong>K. Shiratori</strong>, et al.<br>
-    <em>Competition between Hot Carriers and Surface Electrochemistry in Gold Nanorod Dissolution</em><br>
-    <em>(Accepted)</em>
-  </li>
-  <li>
-    Kim, J.-H., <strong>K. Shiratori</strong>, et al.<br>
-    <em>Suppressed Interparticle Coupling in Plasmonic Meta-Atoms with Intraparticle Hot Spots</em><br>
-    <em>(In Preparation)</em>
-  </li>
-  <li>
-    Yuan, T., <strong>K. Shiratori</strong>, et al.<br>
-    <em>Untangling Energy Dependent Radiation Damping and Chemical Interface Damping in Gold Nanorods</em><br>
-    <em>(In Preparation)</em>
   </li>
 </ol>
 
